[metadata]
name = hapydeis
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = My awsome project with python
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    hapydeis
data_files =
    etc/hapydeis = etc/*

[entry_points]
console_scripts =
    hapydeis_cli = hapydeis.__main__:main
